[package]
name = "network-runner"
version = "0.1.0"
authors = ["OriishiTakahiro <takahiro0914@live.jp>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
askama = "0.8"
clap = "2.33.0"
openssl = "0.10.12"
openssl-sys = "0.9"
x509-parser = "0.4.1"
pem = "0.4"
chrono = "0.4.7"
itertools = "0.8"
